--- a/src/app/components/display/display.component.html
+++ b/src/app/components/display/display.component.html
@@ -1,12 +1,12 @@
 <div class='grid-wrapper'>
 
-  <div class='grid-item' id='00'></div>
-  <div class='grid-item' id='01'></div>
-  <div class='grid-item' id='02'></div>
-  <div class='grid-item' id='03'></div>
-  <div class='grid-item' id='04'></div>
-  <div class='grid-item' id='05'></div>
-  <div class='grid-item' id='06'></div>
+  <div class='grid-item' id='00' (click)='onClick()'></div>
+  <div class='grid-item' id='01' (click)='onClick()'></div>
+  <div class='grid-item' id='02' (click)='onClick()'></div>
+  <div class='grid-item' id='03' (click)='onClick()'></div>
+  <div class='grid-item' id='04' (click)='onClick()'></div>
+  <div class='grid-item' id='05' (click)='onClick()'></div>
+  <div class='grid-item' id='06' (click)='onClick()'></div>
   <div class='grid-item' id='07'></div>
   <div class='grid-item' id='08'></div>
   <div class='grid-item' id='09'></div>
