--- a/src/app/components/buttons/buttons.component.html
+++ b/src/app/components/buttons/buttons.component.html
@@ -3,3 +3,4 @@
 <button (click)='onFillAll()'>fillAll</button>
 <button (click)='onClearAll()'>clearAll</button>
 <button (click)='onStartBreadthFirst'>StartBreadthFirst</button>
+<button (click)='onStartMazeRecursiveBacktracker()'>StartMazeBacktracker</button>
