--- a/src/app/components/buttons/buttons.component.html
+++ b/src/app/components/buttons/buttons.component.html
@@ -4,3 +4,4 @@
 <button (click)='onClearAll()'>clearAll</button>
 <button (click)='onStartBreadthFirst'>StartBreadthFirst</button>
 <button (click)='onStartMazeRecursiveBacktracker()'>StartMazeBacktracker</button>
+<button (click)='onInitStack()'>InitStack</button>
