--- a/src/app/components/display/display.component.scss
+++ b/src/app/components/display/display.component.scss
@@ -26,19 +26,21 @@
         background-color: blue;
     }
 }
-
-.filled{ 
-    background-color: blue; 
-    animation: fillIn 3s ease-in infinite;
+.on-stack{
+    background-color: cyan;
 }
+ .visited{ 
+     background-color: blue; 
+     animation: fillIn 1s ease-in;
+ }
 .start-cell {
-    background-color: green;
+    background-color: lightgreen;
 }
 .finish-cell {
-    background-color: green;
+    background-color: lightpink;
 }
 
-.player-here{ background-color: orange; }
+.has-cursor { background-color: orange; }
 .none{ border-style: none; }
 
 .r{ 
