Begin breadthfirstsearch implementation

--- a/src/app/components/buttons/buttons.component.html
+++ b/src/app/components/buttons/buttons.component.html
@@ -1,7 +1,6 @@
-<button class='button' (click)='onInit()'>Init</button>
-<button (click)='onStartStop()'>startstop</button>
-<button (click)='onFillAll()'>fillAll</button>
-<button (click)='onClearAll()'>clearAll</button>
-<button (click)='onStartBreadthFirst'>StartBreadthFirst</button>
+<button class='button' (click)='onInit()'>Init Maze</button>
+<button (click)='onStartStop()'>Mark startstop both Algos</button>
+<button (click)='onInitBreadth()'>Init Breadth</button>
+<button (click)='onStepBreadth()'>Step Breadth</button>
 <button (click)='onStartMazeRecursiveBacktracker()'>StartMazeBacktracker</button>
-<button (click)='onInitStack()'>InitStack</button>
+<button (click)='onInitStack()'>Init Maze Stack</button>
