--- a/src/app/components/buttons/buttons.component.html
+++ b/src/app/components/buttons/buttons.component.html
@@ -4,3 +4,4 @@
 <button (click)='onStepBreadth()'>Step Breadth</button>
 <button (click)='onStartMazeRecursiveBacktracker()'>StartMazeBacktracker</button>
 <button (click)='onInitStack()'>Init Maze Stack</button>
+<button (click)='onFindShortestPath()'>Find Shortest Path</button>
