--- a/src/app/components/buttons/buttons.component.html
+++ b/src/app/components/buttons/buttons.component.html
@@ -1,7 +1,7 @@
-<button class='button' (click)='onInit()'>Init Maze</button>
+<button class='button' (click)='onInit()'>Init Board</button>
 <button (click)='onStartStop()'>Mark startstop both Algos</button>
 <button (click)='onInitBreadth()'>Init Breadth</button>
-<button (click)='onStepBreadth()'>Step Breadth</button>
-<button (click)='onStartMazeRecursiveBacktracker()'>StartMazeBacktracker</button>
-<button (click)='onInitStack()'>Init Maze Stack</button>
+<button (click)='onStepBreadth()'>Start Breadth</button>
+<button (click)='onStartMazeRecursiveBacktracker()'>Start MazeBacktracker</button>
+<button (click)='onInitStack()'>Init Maze</button>
 <button (click)='onFindShortestPath()'>Find Shortest Path</button>
