Working on shortest path.
almost done. shows on display but is was not marked correctly by algo.

--- a/src/app/components/display/display.component.scss
+++ b/src/app/components/display/display.component.scss
@@ -28,6 +28,7 @@
 .on-stack{
     background-color: cyan;
 }
+
  .visited{ 
      background-color: blue; 
  }
@@ -44,6 +45,9 @@
     background-color: lightpink;
 }
 .has-cursor { 
+    background-color: orange;
+}
+.shortest-path{
     background-color: orange;
 }
 
