--- a/src/app/components/display/display.component.html
+++ b/src/app/components/display/display.component.html
@@ -1,67 +1,67 @@
 <div class='grid-wrapper'>
 
-  <div class='grid-item' id='0_0' (click)='onClick()'></div>
-  <div class='grid-item' id='0_1' (click)='onClick()'></div>
-  <div class='grid-item' id='0_2' (click)='onClick()'></div>
-  <div class='grid-item' id='0_3' (click)='onClick()'></div>
-  <div class='grid-item' id='0_4' (click)='onClick()'></div>
-  <div class='grid-item' id='0_5' (click)='onClick()'></div>
-  <div class='grid-item' id='0_6' (click)='onClick()'></div>
-  <div class='grid-item' id='0_7'></div>
-  <div class='grid-item' id='0_8'></div>
-  <div class='grid-item' id='0_9'></div>
-  <div class='grid-item' id='0_10'></div>
-  <div class='grid-item' id='0_11'></div>
-  <div class='grid-item' id='0_12'></div>
-  <div class='grid-item' id='0_13'></div>
-  <div class='grid-item' id='0_14'></div>
-  <div class='grid-item' id='0_15'></div>
-  <div class='grid-item' id='0_16'></div>
-  <div class='grid-item' id='0_17'></div>
-  <div class='grid-item' id='0_18'></div>
-  <div class='grid-item' id='0_19'></div>
+  <div class='grid-item' id='0_0' (click)="onClick('0_0')"></div>
+  <div class='grid-item' id='0_1' (click)="onClick('0_1')"></div>
+  <div class='grid-item' id='0_2' (click)="onClick('0_2')"></div>
+  <div class='grid-item' id='0_3' (click)="onClick('0_3')"></div>
+  <div class='grid-item' id='0_4' (click)="onClick('0_4')"></div>
+  <div class='grid-item' id='0_5' (click)="onClick('0_5')"></div>
+  <div class='grid-item' id='0_6' (click)="onClick('0_6')"></div>
+  <div class='grid-item' id='0_7' (click)="onClick('0_7')"></div>
+  <div class='grid-item' id='0_8' (click)="onClick('0_8')"></div>
+  <div class='grid-item' id='0_9' (click)="onClick('0_9')"></div>
+  <div class='grid-item' id='0_10' (click)="onClick('0_10')"></div>
+  <div class='grid-item' id='0_11' (click)="onClick('0_11')"></div>
+  <div class='grid-item' id='0_12' (click)="onClick('0_12')"></div>
+  <div class='grid-item' id='0_13' (click)="onClick('0_13')"></div>
+  <div class='grid-item' id='0_14' (click)="onClick('0_14')"></div>
+  <div class='grid-item' id='0_15' (click)="onClick('0_15')"></div>
+  <div class='grid-item' id='0_16' (click)="onClick('0_16')"></div>
+  <div class='grid-item' id='0_17' (click)="onClick('0_17')"></div>
+  <div class='grid-item' id='0_18' (click)="onClick('0_18')"></div>
+  <div class='grid-item' id='0_19' (click)="onClick('0_19')"></div>
 
-  <div class='grid-item' id='1_0'></div>
-  <div class='grid-item' id='1_1'></div>
-  <div class='grid-item' id='1_2'></div>
-  <div class='grid-item' id='1_3'></div>
-  <div class='grid-item' id='1_4'></div>
-  <div class='grid-item' id='1_5'></div>
-  <div class='grid-item' id='1_6'></div>
-  <div class='grid-item' id='1_7'></div>
-  <div class='grid-item' id='1_8'></div>
-  <div class='grid-item' id='1_9'></div>
-  <div class='grid-item' id='1_10'></div>
-  <div class='grid-item' id='1_11'></div>
-  <div class='grid-item' id='1_12'></div>
-  <div class='grid-item' id='1_13'></div>
-  <div class='grid-item' id='1_14'></div>
-  <div class='grid-item' id='1_15'></div>
-  <div class='grid-item' id='1_16'></div>
-  <div class='grid-item' id='1_17'></div>
-  <div class='grid-item' id='1_18'></div>
-  <div class='grid-item' id='1_19'></div>
+  <div class='grid-item' id='1_0' (click)="onClick('1_0')"></div>
+  <div class='grid-item' id='1_1' (click)="onClick('1_1')"></div>
+  <div class='grid-item' id='1_2' (click)="onClick('1_2')"></div>
+  <div class='grid-item' id='1_3' (click)="onClick('1_3')"></div>
+  <div class='grid-item' id='1_4' (click)="onClick('1_4')"></div>
+  <div class='grid-item' id='1_5' (click)="onClick('1_5')"></div>
+  <div class='grid-item' id='1_6' (click)="onClick('1_6')"></div>
+  <div class='grid-item' id='1_7' (click)="onClick('1_7')"></div>
+  <div class='grid-item' id='1_8' (click)="onClick('1_8')"></div>
+  <div class='grid-item' id='1_9' (click)="onClick('1_9')"></div>
+  <div class='grid-item' id='1_10' (click)="onClick('1_10')"></div>
+  <div class='grid-item' id='1_11' (click)="onClick('1_11')"></div>
+  <div class='grid-item' id='1_12' (click)="onClick('1_12')"></div>
+  <div class='grid-item' id='1_13' (click)="onClick('1_13')"></div>
+  <div class='grid-item' id='1_14' (click)="onClick('1_14')"></div>
+  <div class='grid-item' id='1_15' (click)="onClick('1_15')"></div>
+  <div class='grid-item' id='1_16' (click)="onClick('1_16')"></div>
+  <div class='grid-item' id='1_17' (click)="onClick('1_17')"></div>
+  <div class='grid-item' id='1_18' (click)="onClick('1_18')"></div>
+  <div class='grid-item' id='1_19' (click)="onClick('1_19')"></div>
 
-  <div class='grid-item' id='2_0'></div>
-  <div class='grid-item' id='2_1'></div>
-  <div class='grid-item' id='2_2'></div>
-  <div class='grid-item' id='2_3'></div>
-  <div class='grid-item' id='2_4'></div>
-  <div class='grid-item' id='2_5'></div>
-  <div class='grid-item' id='2_6'></div>
-  <div class='grid-item' id='2_7'></div>
-  <div class='grid-item' id='2_8'></div>
-  <div class='grid-item' id='2_9'></div>
-  <div class='grid-item' id='2_10'></div>
-  <div class='grid-item' id='2_11'></div>
-  <div class='grid-item' id='2_12'></div>
-  <div class='grid-item' id='2_13'></div>
-  <div class='grid-item' id='2_14'></div>
-  <div class='grid-item' id='2_15'></div>
-  <div class='grid-item' id='2_16'></div>
-  <div class='grid-item' id='2_17'></div>
-  <div class='grid-item' id='2_18'></div>
-  <div class='grid-item' id='2_19'></div>
+  <div class='grid-item' id='2_0' (click)="onClick('2_0')"></div>
+  <div class='grid-item' id='2_1' (click)="onClick('2_1')"></div>
+  <div class='grid-item' id='2_2' (click)="onClick('2_2')"></div>
+  <div class='grid-item' id='2_3' (click)="onClick('2_3')"></div>
+  <div class='grid-item' id='2_4' (click)="onClick('2_4')"></div>
+  <div class='grid-item' id='2_5' (click)="onClick('2_5')"></div>
+  <div class='grid-item' id='2_6' (click)="onClick('2_6')"></div>
+  <div class='grid-item' id='2_7' (click)="onClick('2_7')"></div>
+  <div class='grid-item' id='2_8' (click)="onClick('2_8')"></div>
+  <div class='grid-item' id='2_9' (click)="onClick('2_9')"></div>
+  <div class='grid-item' id='2_10' (click)="onClick('2_10')"></div>
+  <div class='grid-item' id='2_11' (click)="onClick('2_11')"></div>
+  <div class='grid-item' id='2_12' (click)="onClick('2_12')"></div>
+  <div class='grid-item' id='2_13' (click)="onClick('2_13')"></div>
+  <div class='grid-item' id='2_14' (click)="onClick('2_14')"></div>
+  <div class='grid-item' id='2_15' (click)="onClick('2_15')"></div>
+  <div class='grid-item' id='2_16' (click)="onClick('2_16')"></div>
+  <div class='grid-item' id='2_17' (click)="onClick('2_17')"></div>
+  <div class='grid-item' id='2_18' (click)="onClick('2_18')"></div>
+  <div class='grid-item' id='2_19' (click)="onClick('2_19')"></div>
 
   <div class='grid-item' id='3_0'></div>
   <div class='grid-item' id='3_1'></div>
