--- a/src/app/components/buttons/buttons.component.html
+++ b/src/app/components/buttons/buttons.component.html
@@ -1,7 +1,9 @@
 <button class='button' (click)='onInit()'>Init Board</button>
-<button (click)='onStartStop()'>Mark startstop both Algos</button>
-<button (click)='onInitBreadth()'>Init Breadth</button>
-<button (click)='onStepBreadth()'>Start Breadth</button>
-<button (click)='onStartMazeRecursiveBacktracker()'>Start MazeBacktracker</button>
-<button (click)='onInitStack()'>Init Maze</button>
-<button (click)='onFindShortestPath()'>Find Shortest Path</button>
+<button (click)='onStartMazeRecursiveBacktracker()'>Draw Maze</button>
+<button (click)='onStepBreadth()'>Solve Maze</button>
+<button (click)='onStartStop()'>xx</button>
+<button (click)='onInitBreadth()'>xx</button>
+
+
+<button (click)='onInitStack()'>xx</button>
+<button (click)='onFindShortestPath()'>xx</button>
