--- a/src/app/components/buttons/buttons.component.html
+++ b/src/app/components/buttons/buttons.component.html
@@ -1,6 +1,7 @@
-<button class='button' (click)='onInit()'>Init Board</button>
+
 <button (click)='onStartMazeRecursiveBacktracker()'>Draw Maze</button>
 <button (click)='onStepBreadth()'>Solve Maze</button>
+<button class='button' (click)='onInit()'>Clear Board</button>
 <button (click)='onStartStop()'>xx</button>
 <button (click)='onInitBreadth()'>xx</button>
 
