--- a/src/app/components/buttons/buttons.component.html
+++ b/src/app/components/buttons/buttons.component.html
@@ -1,10 +1,6 @@
 
-<button (click)='onStartMazeRecursiveBacktracker()'>Draw Maze</button>
-<button (click)='onStepBreadth()'>Solve Maze</button>
+<div class='button-panel-wrapper'>
+<button class='button' (click)='onStartMazeRecursiveBacktracker()'>Draw Maze</button>
+<button class='button' (click)='onStepBreadth()'>Solve Maze</button>
 <button class='button' (click)='onInit()'>Clear Board</button>
-<button (click)='onStartStop()'>xx</button>
-<button (click)='onInitBreadth()'>xx</button>
-
-
-<button (click)='onInitStack()'>xx</button>
-<button (click)='onFindShortestPath()'>xx</button>
+</div>
