--- a/src/app/components/buttons/buttons.component.html
+++ b/src/app/components/buttons/buttons.component.html
@@ -1,6 +1,6 @@
 
 <div class='button-panel-wrapper'>
-  <button class='button' (click)='onStartMazeRecursiveBacktracker()'>Draw Maze</button>
-  <button class='button' (click)='onStepBreadth()'>Solve Maze</button>
+  <!-- <button class='button' (click)='onStartMazeRecursiveBacktracker()'>Draw Maze</button> -->
+  <button class='button' (click)='onStepBreadth()'>Run Breadth First Search</button>
   <button class='button' (click)='onInit()'>Clear Board</button>
 </div>
